@@ -1,3 +1,8 @@
+2014-09-30  Leonardo Nobrega  <leonobr@gmail.com>  (tiny change)
+
+	* progmodes/python.el (python-fill-paren): Don't inf-loop at EOB
+	(bug#18462).
+
 2014-09-27  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/package.el (package-check-signature): Default to nil if
